# cumlprims_mg

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  build.sh  dependencies.yaml
.devcontainer/: README.md
.devcontainer/cuda12.9-conda/: devcontainer.json
.devcontainer/cuda12.9-pip/: devcontainer.json
.devcontainer/cuda13.0-conda/: devcontainer.json
.devcontainer/cuda13.0-pip/: devcontainer.json
.devcontainer/cuda13.1-conda/: devcontainer.json
.devcontainer/cuda13.1-pip/: devcontainer.json
.github/: CODEOWNERS  ops-bot.yaml
.github/workflows/: build.yaml  pr.yaml
ci/: build_cpp.sh
ci/checks/: black_lists.sh
ci/release/: update-version.sh
cmake/: RAPIDS.cmake  rapids_config.cmake
conda/environments/: all_cuda-129_arch-aarch64.yaml  all_cuda-129_arch-x86_64.yaml  all_cuda-130_arch-aarch64.yaml  all_cuda-130_arch-x86_64.yaml  all_cuda-131_arch-aarch64.yaml  all_cuda-131_arch-x86_64.yaml
conda/recipes/libcumlprims/: recipe.yaml
cpp/: CMakeLists.txt
cpp/cmake/: doxygen.cmake
cpp/cmake/modules/: ConfigureCUDA.cmake
cpp/include/cumlprims/: cumlprims.hpp
cpp/include/cumlprims/opg/linalg/: eig.hpp  gemm.hpp  lstsq.hpp  mean_squared_error.hpp  mm_aTa.hpp  mv_aTb.hpp  norm.hpp  qr.hpp  qr_based_svd.hpp  svd.hpp
cpp/include/cumlprims/opg/matrix/: data.hpp  math.hpp  matrix_utils.hpp  part_descriptor.hpp
cpp/include/cumlprims/opg/stats/: cov.hpp  mean.hpp  mean_center.hpp  stddev.hpp
cpp/src_prims_opg/: comm_utils.h
cpp/src_prims_opg/linalg/: eig.cu  gemm.cu  lstsq.cu  mean_squared_error.cu  mm_aTa.cu  mv_aTb.cu  norm.cu  qr.cu  qr_based_svd.cu  svd.cu
cpp/src_prims_opg/matrix/: math.cu  matrix_utils.cu  part_descriptor.cu
cpp/src_prims_opg/stats/: cov.cu  mean.cu  mean_center.cu  stddev.cu
cpp/test/: CMakeLists.txt
cpp/test/opg/: README.md  eig.cu  gemm.cu  main.cu  qr.cu  qr_based_svd.cu  test_opg_utils.h  test_utils.h
